--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
 absl-py==0.7.0
+amqp==2.4.2
 astor==0.7.1
+billiard==3.6.0.0
+Click==7.0
+Flask==1.0.2
 gast==0.2.2
 grpcio==1.18.0
 h5py==2.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
+kombu==4.5.0
 Markdown==3.0.1
+MarkupSafe==1.1.1
 mock==2.0.0
 mrcfile==1.1.2
 numpy==1.16.1
 pbr==5.1.2
 protobuf==3.6.1
+pytz==2019.1
 scipy==1.2.1
 six==1.12.0
 tensorboard==1.12.2
 tensorflow==1.13.0rc1
 tensorflow-estimator==1.13.0rc0
 termcolor==1.1.0
+vine==1.3.0
 Werkzeug==0.14.1
 xlwt==1.3.0
